# QuestEngine-Archive

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ProjectDependencies.lua  README.md  genbuild-ninja.bat  genbuild-vs.bat  genbuild.bat  premake5.lua  setup.bat
Quest/: CMakeLists.txt  premake5.lua
Quest/assets/shaders/: CompileShaders.bat
Quest/include/: Quest.h  QuestEntrypoint.h
Quest/src/: qepch.h
Quest/src/Core/: Application.cpp  Application.h  Asserts.h  Base.cpp  Base.h  InputManager.cpp  InputManager.h  KeyCodes.h  Log.cpp  Log.h  Logger.cpp  Logger.h  MouseCodes.h  QuestTypes.h  ServiceLocator.cpp  ServiceLocator.h  Timestep.h  Window.cpp  Window.h
Quest/src/Debug/: Profiler.h
Quest/src/Events/: ApplicationEvent.h  Event.h  EventManager.cpp  EventManager.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Quest/src/Math/: Vertex.h
Quest/src/Platform/OpenGL/: OpenGLDeviceContext.cpp  OpenGLDeviceContext.h  OpenGLRenderDevice.cpp  OpenGLRenderDevice.h
Quest/src/Platform/Vulkan/: VkGraphicsDevice.cpp  VkGraphicsDevice.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceContext.cpp  VulkanDeviceContext.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderDevice.cpp  VulkanRenderDevice.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Quest/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Quest/src/Renderer/: GraphicsDevice.cpp  GraphicsDevice.h  GraphicsEngine.cpp  GraphicsEngine.h  IBuffer.cpp  IBuffer.h  IDeviceContext.cpp  IDeviceContext.h  IRenderDevice.cpp  IRenderDevice.h  ISwapChain.cpp  ISwapChain.h  ITexture.h  RenderCommands.cpp  RenderCommands.h
Quest/src/Utility/: Buffer.h  PathBuilder.h  Timer.h
Quest/src/Utility/Logger/: Logger.h
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/src/: SandboxApp.cpp  SandboxApp.h
design/: new logger colors.txt  rendering architecture.txt
scripts/: GenerateProjectSources.py  GenerateProjects.bat  genbuild-linux.sh  genbuild-ninja.bat  genbuild-vs.bat
